# aoc-2018

./: .gitignore  CMakeLists.txt
day1/: day1.cpp
day2/: Checksum.cpp  Checksum.hpp  day2.cpp  test.cpp
